[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["patrickpt <p.schnass@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
streamlit = "^1.27.0"
docker = "^6.1.3"
openai = "^0.28.1"
llama-index = "^0.8.36"
nltk = "^3.8.1"
pypdf = "^3.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
